# rusty-minty

./: .gitignore  Cargo.toml  README.md  hardhat.config.js  package-lock.json  package.json
contracts/: Minty.sol
scripts/: deploy.js
src/: ipfs.rs  main.rs  mint.rs
