[package]
name = "rusty-minty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
tokio = { version = "1.10.1", features = ["full"] }
ipfs-api = { version = "0.11.0", features = ["with-hyper-rustls"], default-features = false }
structopt = { version = "0.3", default-features = false }
web3 = "0.17.0"
ethabi = "14.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
secp256k1 = "0.20.3"